<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_client"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.shirly.takego.controller.AddBranchActivity"
    android:weightSum="1">


    <EditText
        android:id="@+id/CityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text"
        android:textSize='20sp'
       />
    <EditText
        android:id="@+id/streetEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/street"
        android:inputType="text"
        android:textSize='20sp'
       />
    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="text"
        android:textSize='20sp'
        />
    <EditText
        android:id="@+id/branchNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/branchNumber"
        android:inputType="text"
        android:textSize='20sp' />
    <EditText
        android:id="@+id/parkingEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/parking"
        android:inputType="text"
        android:textSize='20sp'/>



    <Button
        android:id="@+id/addBranchButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_branch"
        android:onClick="addBranch"
        android:textSize='20sp'
        android:background="@color/colorAccent"
        android:textColor="#fff"/>

</LinearLayout>