<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_add_car"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.example.shirly.takego.controller.AddCarActivity"
    android:weightSum="1">

<EditText
    android:id="@+id/branchNumberEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/branchNumber"
    android:inputType="text"
    android:textSize='20sp'
   />
<EditText
    android:id="@+id/modelTypeEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/modelType"
    android:inputType="text"
    android:textSize='20sp'/>
<EditText
    android:id="@+id/mileageEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/mileage"
    android:inputType="text"
    android:textSize='20sp'/>
<EditText
    android:id="@+id/carNumberEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/carNumber"
    android:inputType="text"
    android:textSize='20sp'/>

    <EditText
        android:id="@+id/occupied"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/occupied"
        android:inputType="text"
        android:textSize='20sp' />

    <Spinner
        android:id="@+id/spinnerOccupied"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/occupied"/>


<Button
    android:id="@+id/addCarButton1"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:text="@string/add_car"
    android:textSize='20sp'
    android:onClick="AddCar"
    android:layout_marginRight="200dp"
    android:background="@color/colorPrimaryDark"
    android:textColor="#fff"/>
</TableLayout>